[refactor] cleanup using j21 patterns
no functional changes